add process registration endpoint